added normalize css and made changes to height and padding based on styles applied by normalize, adjusted width of scrollbar thumb

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
       src="https://kit.fontawesome.com/ff7801964a.js"
       crossorigin="anonymous"
     ></script>
+    <link rel="stylesheet" href="normalize.css" />
     <link rel="stylesheet" href="style.css" />
     <title>CHALLENGE BOARD</title>
   </head>
