add JS and styling for submit project modal transition

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           <p>
             When you're ready, submit your Github link here for review.
           </p>
-          <button class="modal-button" id="submit-project-button">
+          <button class="modal-button" id="submit-button">
             Submit Project
           </button>
         </div>
