added user menu js and css

--- a/index.html
+++ b/index.html
@@ -20,15 +20,17 @@
     <div class="nav">
       <i class="fas fa-chess-knight fa-lg"></i>
       <h3>CHALLENGE BOARD</h3>
-      <i class="fas fa-user-circle fa-2x"></i>
+      <i id="user-menu-toggle" class="fas fa-user-circle fa-2x"></i>
       <!-- dropdown with sign-in / account options -->
-      <ul class="user-menu">
-        <li class="my-account"><a href="#">My Account</a></li>
-        <li class="settings"><a href="#">Settings</a></li>
-        <hr />
-        <li class="register"><a href="#">Register</a></li>
-        <li class="login"><a href="#">Login</a></li>
-      </ul>
+      <div class="user-menu-container">
+        <ul class="user-menu">
+          <li class="my-account"><a href="#">My Account</a></li>
+          <li class="settings"><a href="#">Settings</a></li>
+          <hr />
+          <li class="register"><a href="#">Register</a></li>
+          <li class="login"><a href="#">Login</a></li>
+        </ul>
+      </div>
     </div>
 
     <div class="container">
